[package]
name = "streamflow-timelock"
version = "0.3.0"
homepage = "https://streamflow.finance"
description = "Timelock crate for Solana programs"
authors = ["Ivan Jelincic <parazyd@dyne.org>, imprfekt <imprfekt@icloud.com>"]
repository = "https://github.com/streamflow-finance/timelock-crate"
readme = "README.md"
license = "AGPL-3.0-only"
edition = "2018"
exclude = [
    "misc/*",
    ".github/*"
]

[dependencies]
borsh = "0.9.1"
solana-program = "1.8.2"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "1.8.2"
solana-client = "1.8.2"
solana-sdk = "1.8.2"
anyhow = "1.0.44"

[lib]
crate-type = ["cdylib", "lib"]
