[package]
name = "streamflow-timelock"
version = "0.3.0"
homepage = "https://streamflow.finance"
description = "Timelock crate for Solana programs"
authors = [
    "Ivan Jelincic <parazyd@dyne.org>",
    "imprfekt <imprfekt@icloud.com>",
    "Ivan Britvic <ivbritvic@gmail.com>",
    "Stefan Dragisic <91stefan@gmail.com>",
]
repository = "https://github.com/streamflow-finance/timelock-crate"
readme = "README.md"
license = "AGPL-3.0-only"
edition = "2021"
exclude = [
    "misc/*",
    ".github/*"
]

[dependencies]
borsh = "0.9.1"
solana-program = "1.9.0"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.30"

[dependencies.partner-oracle]
git = "ssh://git@github.com/streamflow-finance/partner-oracle.git"

[dev-dependencies]
#solana-program-test = "1.8.10"
solana-client = "1.9.0"
solana-sdk = "1.9.0"
anyhow = "1.0.44"
test-sdk = { path = "./test-sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
